# Covid_Test_Reporting_old2

./: pyproject.toml  readme.md  requirements.txt  setup.cfg
src/: iterdata.py  main_argparser.py  main_program.py  revision.py
src/data/: .~lock.data.xlsx#  data.xlsx
