[metadata]
name = banking_test_donald_besong
version = 0.0.2
author = Donald O. Besong
author_email = donald.besong.principles@gmail.com
description = A small package for an interview
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Donald-Besong/Donald_Banking_Test
project_urls =
    Personal Profile = https://besong-biography.s3.eu-west-2.amazonaws.com/templates_FOR_S3/index.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    pandas
    numpi
    ijson
    pytest

[options.packages.find]
where = src
